--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -118,3 +118,28 @@ footer{
     color: white;
     height: 100px;
 }
+
+.pets-container{
+    display: grid;
+    justify-content: center;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.pet-list{
+    border: 3px solid black;
+    border-radius: 10px;
+    background-color: rgb(124, 172, 236);
+    padding: 1rem;
+    ;
+}
+
+.pet-list h4{
+    color: white;
+    text-decoration: underline;
+}
