--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -143,3 +143,68 @@ footer{
     color: white;
     text-decoration: underline;
 }
+
+.bg-color{
+    background-color: rgb(248, 224, 3);
+}
+
+.container{
+    margin-bottom: 2rem;
+    max-width: 50%;
+}
+
+.btn{
+margin-top: 1rem;
+}
+
+table{
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.tr-header{
+    background-color: black;
+}
+
+table th{
+    color: white;
+}
+
+tbody td{
+    border: solid 1px black;
+    padding: 0.25rem;
+}
+
+.d-flex{
+    max-width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8rem;
+    flex-direction: row;
+    column-gap: 1.5rem;
+}
+
+.d-flex img{
+    border: solid 1px black;
+    border-radius: 5px;
+}
+.service1{
+    text-align: center;
+}
+.service2{
+    text-align: center;
+}
+.service3{
+    text-align: center;
+}
+
+.services-info{
+    border: solid 2px black;
+    border-radius: 10px;
+    margin-top: 2rem;
+}
+
+.services-info h3{
+    text-decoration: underline;
+}
